perf: add aspect-ratio to images to prevent layout shift (CLS)

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -23,12 +23,18 @@
 .carouselItem_img {
     max-width: 145px;
     max-height: 217px;
+    width: 100%;
+    aspect-ratio: 2 / 3;
+    object-fit: cover;
     border-radius: 10px;
     margin-bottom: 5px;
     box-shadow: 0px 0px 5px black;
 }
 
 .carouselItem_img_home {
+    width: 100%;
+    aspect-ratio: 2 / 3;
+    object-fit: cover;
     border-radius: 10px;
     margin-bottom: 5px;
     box-shadow: 0px 0px 5px black;
