--- a/src/components/DisplayItem/DisplayItem.css
+++ b/src/components/DisplayItem/DisplayItem.css
@@ -15,6 +15,9 @@
 }
 
 .poster {
+    width: 100%;
+    aspect-ratio: 2 / 3;
+    object-fit: cover;
     border-radius: 15px;
 }
 
